# mysane

./: Makefile  Makefile.am  Makefile.in  README.md  a.sh  config.status  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
backend/: Makefile  Makefile.in  libabaton_la-abaton.lo  libagfafocus_la-agfafocus.lo  libapple_la-apple.lo  libartec_eplus48u_la-artec_eplus48u.lo  libartec_la-artec.lo  libas6e_la-as6e.lo  libavision_la-avision.lo  libbh_la-bh.lo  libcanon630u_la-canon630u.lo  libcanon_dr_la-canon_dr.lo  libcanon_la-canon.lo  libcardscan_la-cardscan.lo  libcoolscan2_la-coolscan2.lo  libcoolscan3_la-coolscan3.lo  libcoolscan_la-coolscan.lo  libdc210_la-dc210.lo  libdc240_la-dc240.lo  libdc25_la-dc25.lo  libdell1600n_net_la-dell1600n_net.lo  libdll_la-dll.lo  libdll_preload_la-dll.lo  libdmc_la-dmc.lo  libepjitsu_la-epjitsu.lo  libepson2_la-epson2-cct.lo  libepson2_la-epson2-commands.lo  libepson2_la-epson2-io.lo  libepson2_la-epson2-ops.lo  libepson2_la-epson2.lo  libepson2_la-epson2_net.lo  libepson2_la-epson2_scsi.lo  libepson2_la-epson2_usb.lo  libepson_la-epson.lo  libepson_la-epson_scsi.lo  libepson_la-epson_usb.lo  libepsonds_la-epsonds-cmd.lo  libepsonds_la-epsonds-io.lo  libepsonds_la-epsonds-jpeg.lo  libepsonds_la-epsonds-net.lo  (+267 more)
backend/.deps/: canon630u.Po  plustek_pp.Po
backend/.libs/: libsane-abaton.lai  libsane-abaton.so.1.0.27  libsane-agfafocus.lai  libsane-agfafocus.so.1.0.27  libsane-apple.lai  libsane-apple.so.1.0.27  libsane-artec.lai  (+161 more)
frontend/: myscan.c  myscan.h
include/: Makefile  Makefile.in
(+1 files in other folders)
